# image-uploader

./: .editorconfig  .gitignore  COMPILING.MD  COMPILING.txt  Image Uploader.sln  Image Uploader.vcproj  Image Uploader.vcxproj  Image Uploader.vcxproj.filters  ProjectHome.md  README.MD  README.TXT  TODO.txt  changelog.txt  changelog_ru.txt  default.css
Source/: .clang-format  .editorconfig  AboutDlg.cpp  AboutDlg.h  App.Core.props  CMakeLists.txt  ColorPicker.cpp  ColorPicker.h  Com2test_i.c  Common.cpp  Common.h  FileInfoHelper.cpp  FileInfoHelper.h  FloatingWindow.cpp  FloatingWindow.h  GUI.rc  GeneralSettings.cpp  GeneralSettings.h  HotkeyEditor.cpp  HotkeyEditor.h  HotkeySettings.cpp  HotkeySettings.h  HyperLinkControl.cpp  HyperLinkControl.h  IUCom.h  Image Uploader.cpp  Image Uploader.rc  ImageView.cpp  LangClass.cpp  LangClass.h  LangSelect.cpp  LangSelect.h  LogListBox.cpp  LogListBox.h  LogWindow.cpp  LogWindow.h  LoginDlg.cpp  LoginDlg.h  LogoSettings.cpp  LogoSettings.h  (+80 more)
Source/3rdpart/: CP_RSA.cpp  CodePages.cpp  ColorButton.cpp  ColorButton.h  DarkMode.cpp  DarkMode.h  FastDelegate.h  FastGaussianBlurTemplate.h  GdiplusH.cpp  GdiplusH.h  IatHook.cpp  IatHook.h  Markup.h  MemberFunctionCallback.cpp  MemberFunctionCallback.h  PropertyItem.h  PropertyItemEditors.h  PropertyItemImpl.h  PropertyList.h  QColorQuantizer.cpp  QColorQuantizer.h  Registry.cpp  Registry.h  RoundRect.h  ShellPidl.cpp  ShellPidl.h  SplitterBar.h  Unzipper.cpp  Unzipper.h  Win7.h  WinHotkeyCtrl.cpp  WinHotkeyCtrl.h  base64.cpp  codepages.h  parser.cpp  thread.h  vkCodes.cpp  vkCodes.h  wintoastlib.cpp
Source/CLI/: CLI.pro  CLI.rc  CLI.vcproj  CLI.vcxproj  CLI.vcxproj.filters  CMakeLists.txt  ConsoleScriptDialogProvider.cpp  ConsoleScriptDialogProvider.h  ConsoleScriptFunctionsImpl.cpp  ConsoleUtils.cpp  README.txt  main.cpp  resource.h
Source/Common/: CmdLine.cpp  CmdLine.h  MarkupMSXML.cpp  MarkupMSXML.h  MyXML.h  NetworkManager.cpp  NetworkManager.h  trayicon.h
Source/Core/: AbstractServerIconCache.cpp  AbstractServerIconCache.h  AppParams.cpp  AppParams.h  BackgroundTask.cpp  BackgroundTask.h  BasicConstants.h  CMakeLists.txt  COMInitializer.h  CommonDefs.h  CoreFunctions.cpp  CoreFunctions.h  DefaultProxyProvider.cpp  DefaultProxyProvider.h  DownloadTask.cpp  DownloadTask.h  DownloadTaskTest.cpp  FileDownloader.cpp  FileDownloader.h  FileDownloaderTest.cpp  FileQueueUploader.cpp  FileQueueUploader.h  FileTypeCheckTask.cpp  FileTypeCheckTask.h  HistoryManager.cpp  HistoryManager.h  IFileList.h  ImageConverter.cpp  ImageConverter.h  LocalFileCache.cpp  LocalFileCache.h  Logging .cpp  Logging.cpp  Logging.h  Object.cpp  Object.h  OutputCodeGenerator.cpp  OutputCodeGenerator.h  ProgramWindow.h  QtServerIconCache.cpp  (+34 more)
Source/Func/: Base.cpp  Base.h  ClipboardUtils.cpp  ClipboardUtils.h  CmdLine.cpp  CmdLine.h  Common.cpp  Common.h  DefaultLogger.cpp  DefaultLogger.h  DefaultUploadErrorHandler.cpp  DefaultUploadErrorHandler.h  FileInfoHelper.cpp  FileInfoHelper.h  GdiPlusInitializer.cpp  GdiPlusInitializer.h  HistoryManager.cpp  HistoryManager.h  ImageEditorConfigurationProvider.cpp  ImageEditorConfigurationProvider.h  ImageGenerator.cpp  ImageGenerator.h  IuCommonFunctions.cpp  IuCommonFunctions.h  LangClass.cpp  LangClass.h  Library.h  LocalFileCache.cpp  LocalFileCache.h  MediaInfoHelper.cpp  MediaInfoHelper.h  MyDataObject.cpp  MyDataObject.h  MyDropSource.cpp  MyDropSource.h  MyEngineList.cpp  MyEngineList.h  MyLogSink.cpp  MyLogSink.h  MyUtils.cpp  (+15 more)
Source/Gui/: Application.cpp  CMakeLists.txt  CommonDefines.h  Constants.h  FileList.cpp  FileList.h  GuiTools.cpp  GuiTools.h  HwndScopedWrapper.h  IconBitmapUtils.cpp  IconBitmapUtils.h  ImageDownloaderDlg.cpp  ImageDownloaderDlg.h  ResultsWindow.h  ScriptFunctionsImpl.cpp  UploadListModel.cpp  UploadListModel.h  Win7JumpList.cpp  Win7JumpList.h  WizardCommon.cpp  WizardCommon.h
Source/History/: CMakeLists.txt  HistoryManagerImpl.cpp  HistoryManagerImpl.h
Source/HttpClient/: RyeolHttpClient.cpp
Source/ImageEditor/: BasicElements.cpp  BasicElements.h  BasicTypes.cpp  BasicTypes.h  Canvas.cpp  Canvas.h  Document.cpp  Document.h  DrawingElement.cpp  DrawingElement.h  DrawingTool.cpp  DrawingTool.h  ImageEditor.cpp  ImageEditor.rc  ImageEditor.vcproj  InputBox.h  Logger.cpp  MovableElement.cpp  MovableElement.h  MovableElements.cpp  MovableElements.h  Region.cpp  Region.h  resource.h  stdafx.h
Source/ImageUploaderQt/: main.cpp
Source/Plugins/: CP_RSA.cpp
Source/QtIUHelper/: QtIUHelper.pro  loginparamsform.cpp  loginparamsform.h  loginparamsform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qhelpernam.cpp  qhelpernam.h
Source/ScreenCapture/: CMakeLists.txt  CommonTypes.h  MonitorEnumerator.cpp  ScreenCaptureQt.cpp  ScreenCaptureWin.cpp  ScreenCaptureWin.h  WindowsHider.cpp  WindowsHider.h
Source/ServerListTool/: AboutDlg.cpp  CMakeLists.txt  CheckShortUrlTask.cpp  CheckShortUrlTask.h  Helpers.cpp  Helpers.h  MainDlg.cpp  MainDlg.h  ServerCheckerListView.cpp  ServerCheckerListView.h  ServerListTool.cpp  ServerListTool.rc  ServerListTool.vcproj  ServerListTool.vcxproj  ServerListTool.vcxproj.filters  ServerListView.cpp  ServerListView.h  ServersChecker.cpp  ServersChecker.h  ServersCheckerDlg.cpp  ServersCheckerDlg.h  ServersCheckerModel.cpp  ServersCheckerModel.h  ServersCheckerSettings.cpp  ServersCheckerSettings.h  ServersCheckerSettingsDlg.cpp  ServersCheckerSettingsDlg.h  resource.h  stdafx.cpp  stdafx.h
Source/ShellExt/: ExplorerIntegration.cpp  ExplorerIntegration.idl  ExplorerIntegration.rc  ExplorerIntegration.sln  ExplorerIntegration.vcproj  ExplorerIntegration.vcxproj  ExplorerIntegration.vcxproj.filters  ExplorerIntegration_i.c  Helpers.cpp  Helpers.h  IShellContextMenu.cpp  IShellContextMenu.h  IShellContextMenu.rgs  IconBitmapUtils.cpp  IconBitmapUtils.h  resource.h  stdafx.cpp  stdafx.h
Source/Tests/: CMakeLists.txt  TestHelpers.cpp  TestHelpers.h  Tests.cpp  Tests.vcproj  Tests.vcxproj  Tests.vcxproj.filters  sqtest.cpp  sqtest.h
Source/Video/: AbstractFrameGrabber.cpp  AbstractFrameGrabber.h  (+20 more)
(+2111 files in other folders)
